policy/l7_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deathstar-api-protection"
spec:
  description: "Protect Deathstar APIs with Layer 7 policies"
  endpointSelector:
    matchLabels:
      class: deathstar
      org: empire
  ingress:
  - fromEndpoints:
    - matchLabels: # L3
        class: spaceship
    toPorts:
    - ports: # L4
      - port: "80"
        protocol: TCP
      rules:
        http: # L7
        - method: "GET"
          path: "/v1/"
        - method: "POST"
          path: "/v1/request-landing$"
        - method: "PUT"
          path: "/v1/exhaust-port$"
          headers:
          - "X-Has-Force: True"
